examples/failing/f008-parameter-type.sq
fn main() {
    print8(256);
}